# RayShot

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: python_wheel.yml
RayShot/: __init__.py
ray_shot/: __init__.py
src/: d3d11.rs  encoder.rs  graphics_capture_picker.rs  lib.rs
